--- a/config-client.properties
+++ b/config-client.properties
@@ -1,4 +1,6 @@
-Server=myServerAddress
-Database=myDataBase
-Uid=myUsername
-Pwd=myPassword
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+spring.datasource.username=govind
+spring.datasource.password=govind
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.jpa.show-sql: true
